infrastructure/k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: connectix.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: authentication-cluster-ip
              servicePort: 3000
